--- a/src/reset.css
+++ b/src/reset.css
@@ -2,7 +2,6 @@
 	box-sizing: border-box;
 	font-family: 'Roboto', sans-serif;
 }
-
 :root {
 	--primary: #2A7AE4;
 	--black: #000000;
@@ -13,13 +12,20 @@
 	--frontEnd: #6BD1FF;
 	--backend: #00C86F;
 }
-
 html,
 body {
 	margin: 0;
 	padding: 0;
 }
-
 a {
 	color: inherit;
+}
+h1 {
+	margin-top: 0;
+}
+#root {
+	/* min-height: calc(100vh - var(--bodyPaddingTop)); */
+	min-height: 100vh;
+	display: flex;
+	flex-direction: column;
 }
