Implementação do cadastro de categorias

--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -50,6 +50,7 @@ body {
     text-decoration: none;
     display: inline-block;
     transition: opacity .3s;
+    z-index: 1;
 }
 .ButtonLink:hover,
 .ButtonLink:focus {
